# mlbv

./: .gitignore  CHANGELOG.md  DISTRIBUTED_TRAINING.md  GITHUB_INTEGRATION.md  HPC_DEPLOYMENT.md  MIGRATION_GUIDE.md  Makefile  README.md  STRUCTURE.md  __init__.py  config.yaml  config_quick.yaml  data_preparation.py  distributed_train.py  example_usage.py  icenet.py  launch_hpc_training.py  pyproject.toml  requirements.txt  setup.sh  setup_repository.sh  test_hpc_setup.py  train_icenet.py
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hpc_issue.md
.github/workflows/: ci.yml  pr-checks.yml
data/: sample_data.npz
examples/: example_usage.py
icenet/: __init__.py  data.py  distributed.py  model.py  training.py
issues/: ci_cd_pipeline_failure_report.md
models/: best_model.pt  checkpoint_epoch_20.pt  normalization.best_model.pt  normalization.checkpoint_epoch_20.pt
scripts/: launch_hpc_training.py  setup.sh  setup_repository.sh  train.py
tests/: __init__.py  conftest.py  test_data.py  test_hpc.py  test_hpc_setup.py  test_model.py  test_training.py
